--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev_sass": "sass ./src/styles/App.scss ./src/styles/css/App.css --watch"
   },
   "eslintConfig": {
     "extends": [
