--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev_sass": "sass ./src/styles/App.scss ./src/styles/css/App.css --watch"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
